# FootstepLQR

./: .gitignore  CMakeLists.txt  README.md  main.cc
python/: test.py
src/: main.cc
src/controller/: controller.h
src/model/: model.cc  model.h
src/planner/: planner.h
src/visualization/: visualization.cc  visualization.h
